Create body for organization chart screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,16 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/
+
+  fonts:
+    - family: sf_snow
+      fonts:
+        - asset: assets/fonts/font_sf.ttf
+
+
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
